--- a/Wlipper.csproj
+++ b/Wlipper.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clipboarding.cs" />
@@ -136,6 +137,9 @@
     <Content Include="Gfx\Wlipper.ICO" />
     <Content Include="Gfx\WlipperBoxShot.png" />
     <Content Include="TODO.txt" />
+    <Content Include="wlipper.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <EmbeddedResource Include="Localization.de.resx">
       <DependentUpon>Localization.resx</DependentUpon>
     </EmbeddedResource>
