--- a/Wlipper.csproj
+++ b/Wlipper.csproj
@@ -13,7 +13,7 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ApplicationIcon>Gfx\Wlipper.ICO</ApplicationIcon>
-    <IsWebBootstrapper>true</IsWebBootstrapper>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <ManifestCertificateThumbprint>B8632E63AB1DC2FF950D6CFDF25B8D0F23E0FCBB</ManifestCertificateThumbprint>
     <ManifestKeyFile>Wlipper_TemporaryKey.pfx</ManifestKeyFile>
     <GenerateManifests>true</GenerateManifests>
@@ -27,16 +27,16 @@
     <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation />
     <TargetFrameworkProfile />
-    <PublishUrl>http://localhost/Wlipper/</PublishUrl>
+    <PublishUrl>C:\Users\Markus Kwasnicki\Desktop\Wlipper Setup\</PublishUrl>
     <Install>true</Install>
-    <InstallFrom>Web</InstallFrom>
+    <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
+    <MapFileExtensions>false</MapFileExtensions>
     <ProductName>Wlipper</ProductName>
     <PublisherName>Markus Kwaśnicki</PublisherName>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
